# language

./: .gitignore  plib  readme.txt  sc  tc
c/: define.c  globFunc.cpp  globFunc.h  hadoop  srand.c  test.cpp  textRevert.c
c/algorithm/: Btree.cpp  fast_insert.cpp  linknodeRevert.cpp  merge.cpp  poiner.c  printBtree.cpp  printList.cpp  rectOver.cpp  shell_sort.cpp  skip_list.cpp
c/argv/: argv.c  getoptTest.c
c/charactorexchange/: uint642int.c  unicode2utf8.c
c/escapeCharacter/: newline.c
c/gdb/: fork.c
c/kernel/: mmapTest.cpp  sem_timedwait.c
c/memcached_client/: instruct.c  mem_client.c  memcachedClient.cpp  mytestapp.c
c/memory/: arr.cpp  cpy.c  leakout.c  main  memoryalign.c  nullCopy.c  poiner.c  realloc.c  stsetvalue.c  test.cpp
c/micro/: defined.c
c/openssl/: rsa-decrypt.c  rsa-encrypt.c  rsaAndAES.txt
c/signal/: test.cpp
c/sizeof/: cast.c  empty_struct.cpp  etyCArr.c  sizeof.c  uint8_t.c
c/template/: template.c
cmake/cmake_example/: Animal.cpp  CppException.hpp  Forest.cpp  Organism.hpp  Plant.cpp  Time.cpp  Time.hpp  animal_test.cpp  main.cpp  plant_test.cpp  tests_wo_exceptions.cpp
cmake/make_example/: Makefile  test.cpp
configure/: .vimrc  id_rsa.ppk  id_rsa.pub
cxx/algorithm/: 2Q.cpp  2Q.h  BTree2Link.cpp  Makefile  lru.cpp  lru.h  main.cpp  matchModle.cpp  scandir.cpp  searchdir.cpp  searchdir.h
cxx/boost/: any_container.cpp  default_argv_and_bind.cpp  equal_bind.cpp  filesystem.cpp  hash_test.cpp  lambda.cpp  move.cpp  multi-index-container.cpp  polymorphism.cpp  reference_to_reference.cpp  resolver.cpp  system_time.cpp  thread_specific_ptr_test.cpp  tree_and_tuple.cpp
cxx/cxx11/: auto.cpp  rvalue_reference.cpp  tuple.cpp
cxx/dynamicArr/: doubleptr.cpp  dynamic_array.cpp  newArray.cpp
cxx/dynamic_variable_inheritance/: dynamicVarInher.cpp  dynamiccast.cpp
cxx/exception/: exception.cpp  main
cxx/ios_format/: char.cpp  ifstream_test.cpp
cxx/template/: templateBaseClass.cpp
cxx/test/: char_pointer_to_list.cpp  const_pointer.c  construct.cpp  declare_pointer.c  double_ref.cpp  find_substr_string.cpp  gperftool_test.cpp  iterator_error.cpp  mongoWrap.cpp  mongoWrap.h  operatorEqual.cpp  setAndCompare.cpp  signed_int_diversion.cpp  static_methon_reference_to_instance_var.cpp  stringCompareEffective.cpp  string_Test.cpp  tcmalloc_test.cpp  testCpy.cpp  urlEncode.h  valarray.cpp  wchar.cpp
db/postgres/: client.cpp  makefile  pg_con.cpp  pg_con.h  strcmp.cpp
hadoop/: CatAllFileInHDFS.java  FileCopyWithProgress.java  FileSystemCat.java
java/gui/: GreeterApp.java  GreeterGUI.java  Keyboardread.java
ruby/: install.sh  install_psql.sh
ruby/rails/: db.sql  insert.sql  install_rails.doc
ruby/ruby_program/: arg.rb  arraymain.rb  bridge_actor.xml  class.rb  express.rb  filesystem.rb  function.rb  hello.ruby  learn.txt  main.rb  metaprogram.rb  module.rb  regexmain.rb  rexml_test.rb  scanner.rb  ssh.rb  strmain.rb  system.rb  time.rb  try.cpp  udpclient.rb
serverTool/: hide
serverTool/DBfront/: CMakeLists.txt
serverTool/DBfront/.svn/: all-wcprops  entries
serverTool/DBfront/GW_fifo/: GWFifo.cpp  GWFifo.h  GWconstant.h  taginfo.h
serverTool/DBfront/GW_fifo/.svn/: all-wcprops  entries
serverTool/DBfront/GW_fifo/.svn/text-base/: GW_st.h.svn-base  taginfo.cpp.svn-base
serverTool/DBfront/GW_front/: GWDBfront.cpp  GWexecutor.cpp  mysqlConPool.cpp  sqlHandle.cpp  sqlHandle.h  stForMysql.h
serverTool/DBfront/GW_front/.svn/: all-wcprops  entries
serverTool/DBfront/GW_front/.svn/text-base/: GWDBfront.cpp.svn-base  GWDBfront.h.svn-base  GWexecutor.cpp.svn-base  GWexecutor.h.svn-base  mysqlConPool.h.svn-base  mysqlLibrary.cpp.svn-base  mysqlLibrary.h.svn-base  mysqlThreadData.cpp.svn-base  mysqlThreadData.h.svn-base  sqlHandle.cpp.svn-base  sqlHandle.h.svn-base
serverTool/DBfront/GW_test/: CMakeLists.txt  fifotest.cpp
serverTool/DBfront/GW_test/.svn/: all-wcprops  entries
serverTool/DBfront/GW_test/.svn/text-base/: fifotest.cpp.svn-base
serverTool/DBfront/GW_test/DBfrontTest/: DBcorrect.cpp  DBcorrect.h
serverTool/DBfront/GW_test/DBfrontTest/.svn/: all-wcprops  entries
serverTool/DBfront/GW_test/DBfrontTest/.svn/text-base/: DBcorrect.cpp.svn-base  DBcorrect.h.svn-base
serverTool/DBfront/GW_test/assistant/: correctTest.cpp  effiTest.h
serverTool/DBfront/GW_test/assistant/.svn/: all-wcprops  entries
serverTool/DBfront/GW_test/assistant/.svn/text-base/: correctTest.h.svn-base  effiTest.cpp.svn-base  stForTest.h.svn-base
serverTool/DBfront/GW_tool/.svn/: all-wcprops  entries
serverTool/fifo/: CMakeLists.txt
serverTool/fifo/GWTool/.svn/: all-wcprops  entries
serverTool/fifo/GWTool/.svn/text-base/: GWMutex.cpp.svn-base  GWMutex.h.svn-base
serverTool/fifo/fifo/: GWFifo.cpp  GWFifo.h  GWconstant.h
serverTool/fifo/fifo/.svn/: all-wcprops  entries
serverTool/fifo/fifo/.svn/text-base/: GWFifo.cpp.svn-base  GWFifo.h.svn-base  taginfo.cpp.svn-base
serverTool/fifo/test/: CMakeLists.txt  fifotest.cpp
serverTool/fifo/test/.svn/: all-wcprops  entries
serverTool/fifo/test/.svn/text-base/: fifotest.cpp.svn-base
serverTool/fifo/test/assistant/: correctTest.cpp  effiTest.cpp  effiTest.h
serverTool/fifo/test/assistant/.svn/: all-wcprops  entries
serverTool/fifo/test/assistant/.svn/text-base/: correctTest.cpp.svn-base
serverTool/httpModule/: AccUserReg.cpp  AccUserReg.h  CHttp.cpp  CHttp.h
serverTool/httpModule/middFrame/: CMakeLists.txt  GWFifo.cpp  GWFifo.h  GWMutex.cpp  HttpConnect.cpp  HttpConnect.h  HttpDataDispatcher.cpp  HttpDataDispatcher.h  HttpGlobal.cpp  HttpGlobal.h  HttpMsg.h  HttpReqHandle.cpp  HttpReqHandle.h  HttpUtil.h  main.cpp
serverTool/libconhash/: CMakeLists.txt  configure.h  conhash.cpp  conhash.h  conhash_inter.cpp  conhash_inter.h  conhash_util.cpp  md5.cpp  md5.h  sample.cpp  util_rbtree.cpp  util_rbtree.h
shell/: arg.sh  array.sh  backup.sh  condition.sh  declare.c  enter.sh  exec.c  file.sh  first_shell.sh  function.sh  if.rb  infinite_loop.sh  loop.sh  mount_dev_under_linux.txt  operator_=.sh  quote.sh  read_file.sh  scanner_dir.sh  show.sh  ssh  ssh.expect  ssh.sh
(+97 files in other folders)
